 15. New Percolator layouts: mesh, spotted mesh, and branch
 16. Ignore now supports ignoring players by limited categories.
 17. CoffeeMud now supports MTTS, and will skip ANSI prompts at CC if set.
 18. CoffeeMud now supports True color ansi codes, see HELP TRUECOLORS
 19. GMCP now supports more auto-logins.
 20. Sprinking of new CM1 commands: MUDINFO who, port, hosts, and WHOIS -name-
 
# Build 5.10.4 Release 12/05/2024
  *  DATABASE CHANGED! (Bitmap field in CMCHAR table is now larger)
  1. Races/GenRaces support parameters for cultural abilities.
  2. Better MSSP/MSDP support.  New INI entry: MSXPVARS.
  3. Ability CODES & DOMAINS can now be added to via the INI file/control panel.
  4. Deity powers, curses, blessings all now support arguments
  5. New skills: Improved Revoke, Hard to Starboard, Staff Sweep, Staff Block
  6. GenAbilities: better argument parsing (see Game Builders Guide)
  7. New command: NOSPAM
  8. AutoGenInstances will now respect multiple entrances.  See RandomAreas guide.
  9. Two new Pride/TOP Stat config settings, PRIDECATS and PRIDECOUNT in INI file
 10. TOP command now only displays text files in resources/text/topplayers.txt, etc
 11. TOP pride stats are retained for deleted players & accounts, until they fall off.
 12. New Zappermask: +-DOMAIN
 13. Thin Areas will now develop their correct area stats eventually
 14. Can now modify GenAbility IDs, and create new ones based on existing ones.
 15. Regeneration property now has many finer controls
 16. GMCP now supports char.effects.get
 17. New chants: breath color, know animal, enhance potion, spark runes, inspect shard
 18. All Qualifies list now supports secret flag
 19. New formula: proficiency gain; see ini file
 20. Note:  Due to InterMud 3 changes, some will see a harmless one-time error at startup.
 21. New Prayer: Pacify -- a targeted Calm with duration
 22. Proficiency cap from practicing now in INI file (see PRACMAXPCT)