@@ -904,6 +904,7 @@ Targets    : Items\n\r\
 Parameters : masking parameters described below, optional zap message\n\r\
 Example    : -class +mage -race +elf -evil\n\r\
 Example    : MESSAGE="<O-NAME> flies out of <S-NAME>'s hands!" -class +mage\n\r\
+Example    : -class +mage "event=accuse,trespassing" "message=^N"\n\r\
 Description: \n\r\
 Whenever this item is picked up by a mob, the item will be \
 zapped out of the mobs hands if they meet the parameters.  \
@@ -915,6 +916,9 @@ also start with the word CONTENT to have the zapper apply equally to \
 a container and its contents (at least until the thing with the zapper \
 is separated from the container). If the parameters include any alignment \
 checks, the item will end up with an appropriate ambiance as well. \
+The optional EVENT parameter is a comma-delimited set of strings, where the \
+first is one of ZAP (default) or ACCUSE followed by a comma and the crime \
+key from a laws.ini type definition. \
 See AHELP ZAPPERMASK, where allowed can possess, and disallowed is zapped. 
 
 PROP_HEREADJUSTER=\
@@ -1771,9 +1775,11 @@ nofol (disallow followers of appropriate class)  \n\r\
 PROP_REQENTRY=\
 Property   : Prop_ReqEntry\n\r\
 Targets    : Rooms, Areas, Exits, Portals\n\r\
-Parameters : (nosneak) (nofollow) (actual) ("message=my message") mask\n\r\
+Parameters : (nosneak) (nofollow) (actual)  ("message=my message") \n\r\
+Parameters : ("event=[block/accuse],(crime)") mask\n\r\
 Example    : -race +elf\n\r\
 Example    : nosneak -race +elf\n\r\
+Example    : "event=accuse,trespassing" "message=^N" -race +elf\n\r\
 Example    : "message=Elves Only in there!" nofollow -race +elf\n\r\
 Description: \n\r\
 Creates restrictions for entering a room.  Followers will be allowed unless \
@@ -1782,6 +1788,7 @@ nosneak (disallow sneaking past the requirement)\n\r\
 nofol (disallow followers)  \n\r\
 actual (discount disguises)  \n\r\
 "message= ... " (override the default no-entry message. \n\r\
+"event= ..." (comma-delim event: default='block', or 'accuse,-crime,...')\n\t\
 See AHELP ZAPPERMASK, where allowed can enter, and disallowed is not. 
 
 PROP_REQHEIGHT=\
@@ -2043,6 +2050,7 @@ Targets    : Items and Mobs\n\r\
 Parameters : masking parameters described below, optional zap message\n\r\
 Example    : -class +mage -race +elf -evil\n\r\
 Example    : MESSAGE="<S-NAME> jump(s) off of <O-NAME>!" -class +mage\n\r\
+Example    : -class +mage "event=accuse,trespassing" "message=^N"\n\r\
 Description: \n\r\
 Whenever the rider of the item or mob with this property mounts the \
 item, they will be zapped unless it is allowed by the listed parameters.  \n\r\
@@ -2050,6 +2058,9 @@ An optional MESSAGE parameter can define what is seen when the zap occurs. \
 Also optionally, the parameters can start with the word ACTUAL to change \
 zapping behavior to look at actual values instead of perceived values \
 (this about a class check applied to a Charlatan.) \
+The optional EVENT parameter is a comma-delimited set of strings, where the \
+first is one of ZAP (default) or ACCUSE followed by a comma and the crime \
+key from a laws.ini type definition. \
 If the parameters include any alignment checks, the item will end up with an appropriate ambiance as well. \
 For valid masking parameters, \
 see AHELP ZAPPERMASK, where allowed can ride, and disallowed is zapped. 
@@ -2941,6 +2952,7 @@ Targets    : Items\n\r\
 Parameters : masking parameters described below, optional zap message\n\r\
 Example    : -class +mage -race +elf -evil\n\r\
 Example    : MESSAGE="<O-NAME> falls out of <S-NAME>'s hands!" -class +mage\n\r\
+Example    : -class +mage "event=accuse,trespassing" "message=^N"\n\r\
 Description: \n\r\
 Whenever the owner of the item with this property tries to wear or wield the \
 item, they will be zapped unless it is allowed by the listed parameters.  \n\r\
@@ -2948,6 +2960,9 @@ An optional MESSAGE parameter can define what is seen when the zap occurs. \
 Also optionally, the parameters can start with the word ACTUAL to change \
 zapping behavior to look at actual values instead of perceived values \
 (this about a class check applied to a Charlatan.) \
+The optional EVENT parameter is a comma-delimited set of strings, where the \
+first is one of ZAP (default) or ACCUSE followed by a comma and the crime \
+key from a laws.ini type definition. \
 If the parameters include any alignment checks, the item will end up with an appropriate ambiance as well. \
 For valid masking parameters, \
 See AHELP ZAPPERMASK, where allowed can wear, and disallowed is zapped. 
