@@ -20,6 +20,7 @@
  18. CoffeeMud now supports True color ansi codes, see HELP TRUECOLORS
  19. GMCP now supports more auto-logins.
  20. Sprinking of new CM1 commands: MUDINFO who, port, hosts, and WHOIS -name-
+ 21. Prop_ReqEntry and Prop_*Zapper support accusing someone of a crime.
  
 # Build 5.10.4 Release 12/05/2024
   *  DATABASE CHANGED! (Bitmap field in CMCHAR table is now larger)
